Fix keypad width on mobile

--- a/src/components/keypad/style.scss
+++ b/src/components/keypad/style.scss
@@ -3,7 +3,6 @@
   border-radius: 8px;
   background-color: #222;
   padding: 10px;
-  max-width: 25vw;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
